--- a/pug/honour.pug
+++ b/pug/honour.pug
@@ -6,12 +6,12 @@ block vars
 	- var items = [];
 	- items.push({url: 'background-image: url(img/person-photo-01.jpg);', name: 'Мариановская Анастасия Константиновна'});
 	- items.push({url: 'background-image: url(img/person-photo-02.jpg);', name: 'Андреевский Андрей Александрович'});
-	- items.push({url: 'background-image: url(img/person-photo-03.jpg);', name: 'Мариановская Анастасия Константиновн'});
+	- items.push({url: 'background-image: url(img/person-photo-03.jpg);', name: 'Мариановская Анастасия Константиновна'});
 	- items.push({url: 'background-image: url(img/person-photo-02.jpg);', name: 'Андреевский Андрей Александрович'});
-	- items.push({url: 'background-image: url(img/person-photo-01.jpg);', name: 'Мариановская Анастасия Константиновн'});
-	- items.push({url: 'background-image: url(img/person-photo-03.jpg);', name: 'Андреевский Андрей Александрович'});
-	- items.push({url: 'background-image: url(img/person-photo-02.jpg);', name: 'Мариановская Анастасия Константиновн'});
-	- items.push({url: 'background-image: url(img/person-photo-01.jpg);', name: 'Андреевский Андрей Александрович'});
+	- items.push({url: 'background-image: url(img/person-photo-01.jpg);', name: 'Мариановская Анастасия Константиновна'});
+	- items.push({url: 'background-image: url(img/person-photo-03.jpg);', name: 'Мариановская Анастасия Константиновна'});
+	- items.push({url: 'background-image: url(img/person-photo-02.jpg);', name: 'Андреевский Андрей Александрович'});
+	- items.push({url: 'background-image: url(img/person-photo-01.jpg);', name: 'Мариановская Анастасия Константиновна'});
 block content
 	.card.margin-bottom-15
 		.content-title
