--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -72,12 +72,12 @@ block content
 					p Константин Александрович Константинопольский — председатель совета директоров ОМК с июля 2017 года. Ранее А.М. Седых был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ. В 2002-м выбран председателем совета директоров компании, в 2003-2006 годах был президентом ОМК.
 	.row
 		.col-xl-4
-			button.button-big-o.button-big-o-danger ГОРЯЧАЯ ЛИНИЯ ОМК
+			//button.button-big-o.button-big-o-danger ГОРЯЧАЯ ЛИНИЯ ОМК
 		.col-xl-4
-			button.button-big-o.button-big-o-special ГОРЯЧАЯ ЛИНИЯ ОМК
+			button.button-big-o.button-big-o-danger ГОРЯЧАЯ ЛИНИЯ ОМК
 			button.button-big-o ДАТЬ ОБЪЯВЛЕНИЕ
 		.col-xl-4
-			button.button-big-o ДОБАВИТЬ БЛОГ
+			button.button-big-o.button-big-o-special ДОБАВИТЬ БЛОГ
 			button.button-big-o ОТСЛЕЖИВАЕМЫЕ БЛОГИ
 	.card.margin-bottom-15
 		hr.card-hr
@@ -208,7 +208,7 @@ block content
 									strong Наталья
 									strong Константиновна
 									| Председатель правления ОМК
-							button.button.button-border.button-width-142.button-height-30 Применить
+							button.button.button-border.button-width-142.button-height-30 Поздравить
 
 	.row
 		.col-12
