--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -18,7 +18,28 @@
 	}
 	&-icon {
 		&-save {
+			position: relative;
+			@include hover {
+				&:before {
+					opacity: 1;
+					transition: 0.3s;
+				}
+				&:active {
+					&:before {
+						color: $special-color;
 
+					}
+				}
+			}
+			@include before('\e920') {
+				top: 50%;
+				left: -30px;
+				transform: translateY(-50%);
+				@include icon;
+				color: #bcbdc0;
+				opacity: 0;
+				//transition: 0.4s;
+			}
 		}
 	}
 }
@@ -235,6 +256,7 @@
 
 		}
 		&-danger {
+			border-color: $special-color;
 			@include hover {
 				border-color: $special-color;
 				color: $special-color;
